--- a/src/sass/views/_home.scss
+++ b/src/sass/views/_home.scss
@@ -13,6 +13,7 @@
     &__container {
       height: 100%;
       padding-bottom: 60px;
+      overflow: hidden;
 
       .video-js {
         background-color: $colRed;
